Refactor endpoint models to use static nested classes and accessor methods.